--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 python-safety:
-  stage: linting
+  stage: test
   image: pipelinecomponents/python-safety:latest
   script:
     - safety check --full-report -r requirements.txt
