pylint --errors-only

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,4 +8,4 @@ pylint:
   stage: test
   image: registry.gitlab.com/pipeline-components/pylint:amd64-0b84da4
   script:
-    - pylint ffxiv.py
+    - pylint --errors-only ffxiv.py
