--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,15 @@
+stages:
+  - lint
+  - release
+
 python-safety:
-  stage: test
+  stage: lint
   image: pipelinecomponents/python-safety:latest
   script:
     - safety check --full-report -r requirements.txt
 
 pylint:
-  stage: test
+  stage: lint
   image: registry.gitlab.com/pipeline-components/pylint:amd64-0b84da4
   before_script:
     - pip install -r requirements.txt
