--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,7 @@ release:
     #- /^([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*))?(?:\+[0-9A-Za-z-]+)?$/
   script:
     - npm install @semantic-release/gitlab
+    - npm install -g semantic-release @semantic-release/gitlab-config
     - npm install @semantic-release/changelog
     - npm install @semantic-release/release-notes-generator
     - npx semantic-release
