--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,9 +28,9 @@ release:
     # This matches pre-releases
     #- /^([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*))?(?:\+[0-9A-Za-z-]+)?$/
   script:
-    - npm install semantic-release
-    - npm install @semantic-release/gitlab
-    - npm install @semantic-release/gitlab-config
-    - npm install @semantic-release/changelog
-    - npm install @semantic-release/release-notes-generator
+    - npm install -g semantic-release
+    - npm install -g semantic-release @semantic-release/gitlab
+    - npm install -g semantic-release @semantic-release/gitlab-config
+    - npm install -g semantic-release @semantic-release/changelog
+    - npm install -g semantic-release @semantic-release/release-notes-generator
     - semantic-release -e @semantic-release/gitlab-config
