--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,6 +51,7 @@ create-wiki:
   script:
     - git clone https://oauth2:${WIKI_TOKEN}@s2.behead.de/git/ffxiv-scapy-layer.wiki.git
     - cd ffxiv-scapy-layer.wiki
-    #- git config --global user.name "JRSmile"
-    #- git config --global user.email jan@behead.de
+    - date > test.md
+    - git add.
+    - git commit -m "auto update"
     - git push
