--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,11 +49,16 @@ create-wiki:
     refs:
     - main
   script:
+    - pip install pdoc3
+    - git clone https://oauth2:${WIKI_TOKEN}@s2.behead.de/git/ffxiv-scapy-layer.git
+    - cd ffxiv-scapy-layer
+    - pdoc ffxiv.py > ../home.md
+    - cd ..
     - git clone https://oauth2:${WIKI_TOKEN}@s2.behead.de/git/ffxiv-scapy-layer.wiki.git
     - cd ffxiv-scapy-layer.wiki
     - git config --global user.name "JRSmile"
     - git config --global user.email jan@behead.de
-    - date > test.md
+    - mv ../home.md .
     - git add .
     - git commit -m "auto update"
     - git push
