--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,47 +1,44 @@
+# You can override the included template(s) by including variable overrides
+# SAST customization: https://docs.gitlab.com/ee/user/application_security/sast/#customizing-the-sast-settings
+# Secret Detection customization: https://docs.gitlab.com/ee/user/application_security/secret_detection/#customizing-settings
+# Dependency Scanning customization: https://docs.gitlab.com/ee/user/application_security/dependency_scanning/#customizing-the-dependency-scanning-settings
+# Note that environment variables can be set in several places
+# See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
 stages:
-  - lint
-  - test
-  - release
-
+- lint
+- test
+- release
 include:
-  - template: Code-Quality.gitlab-ci.yml
-
+- template: Code-Quality.gitlab-ci.yml
+- template: Security/SAST.gitlab-ci.yml
 python-safety:
   stage: lint
   image: pipelinecomponents/python-safety:latest
   script:
-    - safety check --full-report -r requirements.txt
-
+  - safety check --full-report -r requirements.txt
 pylint:
   stage: lint
   image: registry.gitlab.com/pipeline-components/pylint:amd64-0b84da4
   before_script:
-    - pip install -r requirements.txt
+  - pip install -r requirements.txt
   script:
-    - pylint --errors-only ffxiv.py
-
+  - pylint --errors-only ffxiv.py
 release:
   image: node:13
   stage: release
   only:
     refs:
     - main
-    #- alpha
-    # This matches maintenance branches
-    #- /^(([0-9]+)\.)?([0-9]+)\.x/
-    # This matches pre-releases
-    #- /^([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*))?(?:\+[0-9A-Za-z-]+)?$/
   script:
-    - npm install -g semantic-release
-    - npm install -g semantic-release @semantic-release/git
-    - npm install -g semantic-release @semantic-release/gitlab
-    - npm install -g semantic-release @semantic-release/gitlab-config
-    - npm install -g semantic-release @semantic-release/changelog
-    - npm install -g semantic-release @semantic-release/release-notes-generator
-    - npm install -g semantic-release @semantic-release/exec
-    - npm install -g semantic-release @semantic-release/commit-analyzer
-    - semantic-release -e @semantic-release/gitlab-config
-
+  - npm install -g semantic-release
+  - npm install -g semantic-release @semantic-release/git
+  - npm install -g semantic-release @semantic-release/gitlab
+  - npm install -g semantic-release @semantic-release/gitlab-config
+  - npm install -g semantic-release @semantic-release/changelog
+  - npm install -g semantic-release @semantic-release/release-notes-generator
+  - npm install -g semantic-release @semantic-release/exec
+  - npm install -g semantic-release @semantic-release/commit-analyzer
+  - semantic-release -e @semantic-release/gitlab-config
 create-wiki:
   image: python:3.9
   stage: release
@@ -49,17 +46,19 @@ create-wiki:
     refs:
     - main
   script:
-    - pip install pdoc3
-    - pip install scapy
-    - git clone https://oauth2:${WIKI_TOKEN}@s2.behead.de/git/ffxiv-scapy-layer.git
-    - cd ffxiv-scapy-layer
-    - pdoc ffxiv.py > ../home.md
-    - cd ..
-    - git clone https://oauth2:${WIKI_TOKEN}@s2.behead.de/git/ffxiv-scapy-layer.wiki.git
-    - cd ffxiv-scapy-layer.wiki
-    - git config --global user.name "JRSmile"
-    - git config --global user.email jan@behead.de
-    - mv ../home.md .
-    - git add .
-    - git commit -m "auto update"
-    - git push
+  - pip install pdoc3
+  - pip install scapy
+  - git clone https://oauth2:${WIKI_TOKEN}@s2.behead.de/git/ffxiv-scapy-layer.git
+  - cd ffxiv-scapy-layer
+  - pdoc ffxiv.py > ../home.md
+  - cd ..
+  - git clone https://oauth2:${WIKI_TOKEN}@s2.behead.de/git/ffxiv-scapy-layer.wiki.git
+  - cd ffxiv-scapy-layer.wiki
+  - git config --global user.name "JRSmile"
+  - git config --global user.email jan@behead.de
+  - mv ../home.md .
+  - git add .
+  - git commit -m "auto update"
+  - git push
+sast:
+  stage: test
