--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,11 +18,18 @@ python-safety:
   - safety check --full-report -r requirements.txt
 pylint:
   stage: lint
-  image: registry.gitlab.com/pipeline-components/pylint:amd64-0b84da4
   before_script:
-  - pip install -r requirements.txt
+    - pip install pylint pylint-exit anybadge
+    - pip install -r requirements.txt
   script:
-  - pylint ffxiv.py
+    - mkdir ./pylint
+    - pylint --output-format=text . | tee ./pylint/pylint.log || pylint-exit $?
+    - PYLINT_SCORE=$(sed -n 's/^Your code has been rated at \([-0-9.]*\)\/.*/\1/p' ./pylint/pylint.log)
+    - anybadge --label=Pylint --file=pylint/pylint.svg --value=$PYLINT_SCORE 2=red 4=orange 8=yellow 10=green
+    - echo "Pylint score is $PYLINT_SCORE"
+  artifacts:
+    paths:
+      - ./pylint/
 release:
   image: node:13
   stage: release
