--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ python-safety:
   - safety check --full-report -r requirements.txt
 pylint:
   stage: lint
+  image: python:3.9
   before_script:
     - pip install pylint pylint-exit anybadge
     - pip install -r requirements.txt
