--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,6 +39,7 @@ release:
     - main
   script:
   - npm install -g semantic-release
+  - npm install -g semantic-release @semantic-release/git
   - npm install -g semantic-release @semantic-release/gitlab
   - npm install -g semantic-release @semantic-release/gitlab-config
   - npm install -g semantic-release @semantic-release/changelog
