--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ pylint:
     - pip install -r requirements.txt
   script:
     - mkdir ./pylint
-    - pylint ./ffxiv.py --output-format=text . | tee ./pylint/pylint.log || pylint-exit $?
+    - pylint ./ffxiv.py --ignore=. --output-format=text . | tee ./pylint/pylint.log || pylint-exit $?
     - PYLINT_SCORE=$(sed -n 's/^Your code has been rated at \([-0-9.]*\)\/.*/\1/p' ./pylint/pylint.log)
     - anybadge --label=Pylint --file=pylint/pylint.svg --value=$PYLINT_SCORE 2=red 4=orange 8=yellow 10=green
     - echo "Pylint score is $PYLINT_SCORE"
