--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
       "@semantic-release/changelog",
       ["@semantic-release/exec", {
         "prepareCmd": "curl --request PUT --header \"PRIVATE-TOKEN: $GITLAB_TOKEN\" \"https://s2.behead.de/api/v4/projects/2/variables/CI_SEM_VER\" --form \"value=${nextRelease.version}\"",
-        "prepareCmd": "curl --request POST --header \"PRIVATE-TOKEN: $GITLAB_TOKEN\" --data \"link_url=https://s2.behead.de/git/ffxiv-scapy-layer/-/releases&image_url=https://img.shields.io/badge/Version-${nextRelease.version}-blue\" \"https://s2.behead.de/api/v4/projects/2/badges\""
+        "prepareCmd": "curl --request PUT --header \"PRIVATE-TOKEN: $GITLAB_TOKEN\" --data \"link_url=https://s2.behead.de/git/ffxiv-scapy-layer/-/releases&image_url=https://img.shields.io/badge/Version-${nextRelease.version}-blue\" \"https://s2.behead.de/api/v4/projects/2/badges/8\""
       }],
       "@semantic-release/git",
       [
