--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,17 +52,17 @@ create-wiki:
     refs:
     - main
   script:
-  - pip install pdoc3
+  - pip install pdoc
   - git clone https://oauth2:${WIKI_TOKEN}@s2.behead.de/git/ffxiv-scapy-layer.git
   - cd ffxiv-scapy-layer
   - pip install -r requirements.txt
-  - pdoc ffxiv.py > ../home.md
+  - pdoc --no-search ffxiv.py -o ..
   - cd ..
   - git clone https://oauth2:${WIKI_TOKEN}@s2.behead.de/git/ffxiv-scapy-layer.wiki.git
   - cd ffxiv-scapy-layer.wiki
   - git config --global user.name "JRSmile"
   - git config --global user.email jan@behead.de
-  - mv ../home.md .
+  - mv ../ffxiv.html home.md
   - echo Last updated >> home.md
   - date >> home.md
   - git add .
