--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,17 +56,10 @@ create-wiki:
   - git clone https://oauth2:${WIKI_TOKEN}@s2.behead.de/git/ffxiv-scapy-layer.git
   - cd ffxiv-scapy-layer
   - pip install -r requirements.txt
-  - pdoc --no-search ffxiv.py -o ..
-  - cd ..
-  - git clone https://oauth2:${WIKI_TOKEN}@s2.behead.de/git/ffxiv-scapy-layer.wiki.git
-  - cd ffxiv-scapy-layer.wiki
-  - git config --global user.name "JRSmile"
-  - git config --global user.email jan@behead.de
-  - mv ../ffxiv.html home.md
-  - echo Last updated >> home.md
-  - date >> home.md
-  - git add .
-  - git commit -m "auto update"
-  - git push
+  - mkdir docs
+  - pdoc --no-search ffxiv.py -o ./docs
+    artifacts:
+    paths:
+      - ./docs/
 sast:
   stage: test
